--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
   "dependencies": {
     "@prisma/client": "^6.5.0",
     "express": "^5.1.0",
-    "nodemon": "^3.1.9",
     "prisma": "^6.5.0"
+  },
+  "devDependencies": {
+    "nodemon": "^3.1.9"
   }
 }
